// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`$append on a non array item should do nothing and be stripped 1`] = `
"{
	\\"1a\\": {
		\\"1aa\\": 1
	},
	\\"2b\\": {
		\\"2bb\\": 2
	}
}"
`;

exports[`when merging two arrays and the source item has $append and an other item also has $append it should append them in the order they are defined 1`] = `
"{
	\\"a\\": [
		{
			\\"aa\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append 1\\"
		},
		{
			\\"cc\\": \\"append 2\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has $append it should append the source array item 1`] = `
"{
	\\"a\\": [
		{
			\\"aa\\": \\"string\\"
		},
		{
			\\"bb\\": \\"append\\"
		}
	]
}"
`;

exports[`when merging two arrays and the source item has $append it should append the source array item even if there is an $index indicator with a higher index 1`] = `
"{
	\\"a\\": [
		{
			\\"aa\\": \\"string\\"
		},
		{
			\\"cc\\": \\"insert\\"
		},
		{
			\\"bb\\": \\"append\\"
		}
	]
}"
`;
